[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/session_window/session_window.gd" type="Script" id=1]

[node name="SessionWindow" type="PopupDialog"]
visible = true
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 350, 150 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 37.0
margin_top = 48.0
margin_right = 313.0
margin_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 15
custom_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 276.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 9
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
text = "Username"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 76.0
margin_right = 276.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
align = 2

[node name="ErrorLabel" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 34.0
margin_right = 144.0
margin_bottom = 48.0
text = "Generic error label!"
align = 1
valign = 1

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 66.0
margin_top = 34.0
margin_right = 210.0
margin_bottom = 54.0
size_flags_horizontal = 4
text = "Enter Random Match"

[node name="ConnectingLabel" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 64.0
margin_right = 276.0
margin_bottom = 78.0
text = "Connecting..."
align = 1

[connection signal="text_changed" from="CenterContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="CenterContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
